[package]
name = "dats_contract_full"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-storage-plus = "1.2.0"
thiserror = "1.0.57"

